Fix scrollbar issue of the column based gallery
Fixes teh scrollbar issue of the column based gallery which is the last
one as the gallery container was not able to contain all the images
inside itself because of the large minimum sizes declared for the
images. This commit fixes it by decreasing the minimum width of the
images to 60px so as to accomodate no matter how small the viewport
width becomes

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -167,10 +167,10 @@ body {
     .css-grid__boxes--columns {
       position: relative;
       @include margin(30px 20px null 20px);
-      padding-bottom: 20px;
+      padding-bottom: 50px;
       display: grid;
       grid-template-rows: repeat(6, 100px);
-      grid-template-columns: repeat(2, minmax(120px, 1fr));
+      grid-template-columns: repeat(2, minmax(60px, 1fr));
       grid-template-areas:
         "image1 image7"
         "image2 image8"
@@ -178,11 +178,9 @@ body {
         "image4 image10"
         "image5 image11"
         "image6 image12";
-      gap: 15px;
+      gap: 20px;
       grid-auto-flow: column dense;
-      grid-auto-columns: 100px 150px 200px 250px 50px;
-      overflow: scroll;
-
+      grid-auto-columns: minmax(60px, 2fr) minmax(60px, 1fr) 200px 250px 50px;
       &__image {
         width: 100%;
         min-width: 100%;
