--- a/sass/partials/_variables.scss
+++ b/sass/partials/_variables.scss
@@ -29,12 +29,10 @@ $min__image--height: 100px;
 $max__image--height: 150px;
 $fill-parent: 100%;
 $box--width: 260px;
-$box--height: 260px
-
-$bp: 
+$box--height: 260px;
 
 // === miscelleneous ===
-$header--background: #abd;
+$header--background: #333;
 $heading--width: 100%;
 $margin--middle: 0 auto;
 $according-to-content: min-content;
